Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22471

[4.8 -> 4.9] Generic Linux device connection test hangs at SFTP checking step

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.11.0-beta1
    • Qt Creator 4.9.0, Qt Creator 4.10.0-beta1
    • Remote Linux
    • Windows 10 running on virtual machine on KVM.
    • Windows
    • 016ad4a9788fa3015849c8260600a832f8e60f17 (qt-creator/qt-creator/4.11)

      After upgrading from 4.8 to 4.9 I can't deploy application from Windows anymore. 4.10.0 doesn't work as well.

      If I try to check connection with remote Linux device using "Test" button in "tools->Options->Devices", QtCreator hangs at "Checking whether an SFTP connection can be set up...". (see attached screenshot).

      If I run QtCreator 4.9.0 on GNU/Linux (Debian Buster), then connection check works correctly and application can be deployed to the target..

      As I known QtCreator started to use OpenSSH tools since 4.9.0. So I've tried to upgrade them on Windows from 7.6 (default) to 7.9p1 (latest). No difference. 

      I've tried sftp.exe manually to upload file to the target and it worked as expected.

        1. SFTP stucks.png
          42 kB
          Andrey Skvortsov
        2. Screenshot from 2019-06-03 23-59-57.png
          24 kB
          Andrey Skvortsov
        3. Screenshot from 2019-09-21 21-53-25.png
          26 kB
          Andrey Skvortsov
        4. Screenshot from 2019-09-21 23-34-10.png
          14 kB
          Andrey Skvortsov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            skvorl Andrey Skvortsov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes